fix: fix styling causing cart drop down content overlap

--- a/client/src/customer/components/Nav/nav.css
+++ b/client/src/customer/components/Nav/nav.css
@@ -304,7 +304,7 @@
 .drop-cart {
     position: fixed;
     width: 300px;
-    height: 480px;
+    min-height: 580px;
     top: 48px;
     right: 20px;
     display: none;
@@ -315,7 +315,7 @@
 .drop-cart-bkg {
     position: absolute;
     width: 300px;
-    height: 400px;
+    height: 460px;
     background-color: var(--pale-gold);
     top: 80px;
     right: 0;
@@ -338,7 +338,7 @@
 .drop-cart-bkg-overlay {
     position: absolute;
     width: 300px;
-    height: 400px;
+    height: 460px;
     background: var(--metallic-overlay);
     background-size: 200%;
     background-position: 50% 50%;
@@ -367,7 +367,7 @@
 .drop-cart-container {
     position: absolute;
     width: 292px;
-    height: 392px;
+    height: 452px;
     background-color: var(--peach-blossom);
     top: 84px;
     right: 4px;
